static/css/view-project/activity-user.css
.activity.user .application-status {
  font-size: .9em;
  font-weight: 300;
  margin-top: 1em;
}

.activity.user .application-status .dot {
  margin-right: .3em;
  margin-left: 0;
}

.activity.user .additional {
  clip: rect(0, 0, 0, 0);
  width: 1px;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
}

.activity.user .chevron {
  transition: transform 100ms;
}

.activity.user.expanded .chevron {
  transform: rotate(180deg);
}

.activity.user.expanded .row.info {
  flex-direction: column;
  align-items: flex-start;
}

.activity.user.expanded .row.info .labeled:last-child {
  margin-top: .8em;
}

.activity.user.expanded .labeled .content.secondary,
.activity.user.expanded .additional {
  clip: auto;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
}

.activity.user.expanded .description,
.activity.user.expanded .chips,
.activity.user.expanded .volunteers,
.activity.user.expanded .spots {
  margin-top: .8em;
}

.activity.user.expanded .description .content,
.activity.user.expanded .spots .content {
  font-size: .95rem;
  white-space: pre-line;
}

.activity.user.expanded .volunteers > div.text {
  display: block;
}

.activity.user.expanded .volunteers ul {
  padding-left: 1.5em;
  margin: .5em 0 1em;
}

.activity.user.expanded .volunteers ul li {
  margin-top: .5em;
}

.activity.user.expanded .volunteers ul strong {
  margin-top: .8em;
  display: block;
}

.activity.user.expanded .application {
  border-top: 1px solid #ddd;
  padding-top: .8em;
  margin-top: .8em;
  font-weight: 300;
}

.activity.user.expanded .application .with-icon {
  margin-top: .5em;
  white-space: pre-line;
}

.activity.user.expanded .not-logged-in {
  align-self: center;
  font-weight: 300;
}

@media only screen and (max-width: 379px) {
  .volunteers .icon {
    display: none;
  }
}

/* stylelint-disable indentation */
@media screen and (min-width: 420px) and (max-width: 679px), (min-width: 1024px) and (max-width: 1199px), (min-width: 1400px) {
  .activity.user .row > .labeled:first-child {
    flex-basis: 40%;
  }
  .activity.user .row > .labeled:last-child {
    flex-basis: 60%;
  }
  .activity.user:not(.expanded) .labeled .content.secondary {
    clip: auto;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
  }
  .activity.user.expanded .row.info {
    flex-direction: row;
  }
  .activity.user.expanded .row.info > .labeled:last-child {
    margin-top: 0;
  }
}

/* stylelint-enable indentation */

